# ASTRO

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PLAN.md  PRD.md  RUNBOOK.md  SAFETY.md
docs/phase0/: CAPABILITIES.md  EVAL.md  README.md  THREAT_MODEL.md
docs/phase1/: README.md
docs/phase2/: README.md
docs/phase3/: README.md
docs/phase4/: README.md
eval/: eval.py
scripts/: astro-service.sh  astro.service  release_check.py  setup.sh
src/astro/: __init__.py  __main__.py  agent.py  audit.py  capabilities.py  chat.py  cli.py  config.py  curator.py  feedback.py  index.py  memory.py  model_registry.py  skills.py  trainer.py  vault.py  web.py
src/astro/templates/: index.html
tests/: test_capabilities.py  test_chat.py  test_index.py  test_memory.py  test_phase3.py  test_web.py
