[project]
name = "astro-ai"
version = "0.1.0"
description = "ASTRO AI — local-first, permissioned personal AI platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.25",
    "pydantic>=2.0",
    "python-frontmatter>=1.0",
    "markdown>=3.5",
    "sqlite-vec>=0.1",
    "sentence-transformers>=3.0",
    "requests>=2.31",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
astro = "astro.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
